--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,12 @@
 <resources>
-    <string name="app_name">MvpRetrofitProject</string>
+    <string name="app_name">找乐</string>
     <string name="action_settings">Settings</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
+
+    <string-array name="left_item">
+        <item>新闻头条</item>
+        <item>开心一刻</item>
+        <item>微信精选</item>
+    </string-array>
 </resources>
