--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">找乐</string>
+    <string name="app_name">玩乐</string>
     <string name="action_settings">Settings</string>
     <string name="open">open</string>
     <string name="close">close</string>
