--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,9 @@
 <resources>
-    <string name="app_name">玩乐</string>
+    <string name="app_name">嗨起来</string>
     <string name="action_settings">Settings</string>
     <string name="open">open</string>
     <string name="close">close</string>
+    <string name="double_click_exit">双击退出程序</string>
 
     <string-array name="left_item">
         <item>新闻头条</item>
